[package]
name = "graaf"
version = "0.88.6"
edition = "2021"
authors = ["Bas Dirks <bas.dirks@protonmail.com>"]
categories = ["algorithms", "data-structures", "mathematics"]
description = "Work with directed graphs."
documentation = "https://docs.rs/graaf"
keywords = ["bfs", "digraph", "dijkstra", "graph"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bsdrks/graaf"

[lib]

[dev-dependencies]
divan = "0.1.14"
proptest = "1.5.0"

[profile.test.package.proptest]
opt-level = 3

[[bench]]
name = "biclique"
path = "benches/gen/biclique.rs"
harness = false

[[bench]]
name = "circuit"
path = "benches/gen/circuit.rs"
harness = false

[[bench]]
name = "complete"
path = "benches/gen/complete.rs"
harness = false

[[bench]]
name = "cycle"
path = "benches/gen/cycle.rs"
harness = false

[[bench]]
name = "empty"
path = "benches/gen/empty.rs"
harness = false

[[bench]]
name = "path"
path = "benches/gen/path.rs"
harness = false

[[bench]]
name = "random_tournament"
path = "benches/gen/random_tournament.rs"
harness = false

[[bench]]
name = "star"
path = "benches/gen/star.rs"
harness = false

[[bench]]
name = "bang_jensen_94"
path = "benches/distances/bang_jensen_94.rs"
harness = false

[[bench]]
name = "bang_jensen_96"
path = "benches/distances/bang_jensen_96.rs"
harness = false

[[bench]]
name = "bang_jensen_99"
path = "benches/distances/bang_jensen_99.rs"
harness = false

[[bench]]
name = "erdos_renyi"
path = "benches/distances/erdos_renyi.rs"
harness = false

[[bench]]
name = "kattis_bryr_1"
path = "benches/distances/kattis_bryr_1.rs"
harness = false

[[bench]]
name = "kattis_bryr_2"
path = "benches/distances/kattis_bryr_2.rs"
harness = false

[[bench]]
name = "kattis_bryr_3"
path = "benches/distances/kattis_bryr_3.rs"
harness = false

[[bench]]
name = "kattis_crosscountry"
path = "benches/distances/kattis_crosscountry.rs"
harness = false

[[bench]]
name = "kattis_shortestpath1"
path = "benches/distances/kattis_shortestpath1.rs"
harness = false
