[package]
name = "graaf"
version = "0.100.0"
edition = "2021"
authors = ["Bas Dirks <bas.dirks@protonmail.com>"]
categories = ["algorithms", "data-structures", "mathematics"]
description = "Work with directed graphs."
documentation = "https://docs.rs/graaf"
keywords = ["bfs", "digraph", "dijkstra", "graph"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bsdrks/graaf"

[lib]

[dev-dependencies]
divan = "0.1.14"
proptest = "1.5.0"

[profile.test.package.proptest]
opt-level = 3

[[bench]]
name = "distances_bang_jensen_94"
path = "benches/distances/bang_jensen_94.rs"
harness = false

[[bench]]
name = "distances_bang_jensen_96"
path = "benches/distances/bang_jensen_96.rs"
harness = false

[[bench]]
name = "distances_bang_jensen_99"
path = "benches/distances/bang_jensen_99.rs"
harness = false

[[bench]]
name = "distances_kattis_bryr_1"
path = "benches/distances/kattis_bryr_1.rs"
harness = false

[[bench]]
name = "distances_kattis_bryr_2"
path = "benches/distances/kattis_bryr_2.rs"
harness = false

[[bench]]
name = "distances_kattis_bryr_3"
path = "benches/distances/kattis_bryr_3.rs"
harness = false

[[bench]]
name = "distances_kattis_crosscountry"
path = "benches/distances/kattis_crosscountry.rs"
harness = false

[[bench]]
name = "distances_kattis_shortestpath1"
path = "benches/distances/kattis_shortestpath1.rs"
harness = false

[[bench]]
name = "distances_erdos_renyi"
path = "benches/distances/erdos_renyi.rs"
harness = false

[[bench]]
name = "gen_biclique"
path = "benches/gen/biclique.rs"
harness = false

[[bench]]
name = "gen_circuit"
path = "benches/gen/circuit.rs"
harness = false

[[bench]]
name = "gen_complete"
path = "benches/gen/complete.rs"
harness = false

[[bench]]
name = "gen_cycle"
path = "benches/gen/cycle.rs"
harness = false

[[bench]]
name = "gen_empty"
path = "benches/gen/empty.rs"
harness = false

[[bench]]
name = "gen_erdos_renyi"
path = "benches/gen/erdos_renyi.rs"
harness = false

[[bench]]
name = "gen_growing_network"
path = "benches/gen/growing_network.rs"
harness = false

[[bench]]
name = "gen_path"
path = "benches/gen/path.rs"
harness = false

[[bench]]
name = "gen_random_tournament"
path = "benches/gen/random_tournament.rs"
harness = false

[[bench]]
name = "gen_star"
path = "benches/gen/star.rs"
harness = false

[[bench]]
name = "gen_wheel"
path = "benches/gen/wheel.rs"
harness = false

[[bench]]
name = "op_complement"
path = "benches/op/complement.rs"
harness = false

[[bench]]
name = "op_converse"
path = "benches/op/converse.rs"
harness = false

[[bench]]
name = "op_is_complete"
path = "benches/op/is_complete.rs"
harness = false

[[bench]]
name = "algo_bfs_iter"
path = "benches/algo/bfs_iter.rs"
harness = false

[[bench]]
name = "algo_bfs_new"
path = "benches/algo/bfs_new.rs"
harness = false

[[bench]]
name = "algo_bellman_ford_moore_new"
path = "benches/algo/bellman_ford_moore_new.rs"
harness = false
