[package]
name = "graaf"
version = "0.110.0"
edition = "2021"
authors = ["Bas Dirks <bas.dirks@protonmail.com>"]
categories = ["algorithms", "data-structures", "mathematics"]
description = "Work with directed graphs."
documentation = "https://docs.rs/graaf"
keywords = ["bfs", "digraph", "dijkstra", "graph"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bsdrks/graaf"

[lints.clippy]
# groups
all = "deny"
cargo = "deny"
pedantic = "deny"
nursery = "deny"
# restrictions
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
missing_assert_message = "deny"
multiple_inherent_impl = "deny"
panic_in_result_fn = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_in_result = "deny"
# overwrites
large_stack_frames = { level = "allow", priority = 1 }
large_stack_arrays = { level = "allow", priority = 1 }
many_single_char_names = { level = "allow", priority = 1 }

[lints.rust]
# groups
rust_2018_idioms = "deny"
# lints
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.rustdoc]
all = "deny"

[lib]

[dev-dependencies]
divan = "0.1.17"
proptest = "1.6.0"

[[bench]]
name = "distances_bang_jensen_94"
path = "benches/distances/bang_jensen_94.rs"
harness = false

[[bench]]
name = "distances_bang_jensen_96"
path = "benches/distances/bang_jensen_96.rs"
harness = false

[[bench]]
name = "distances_bang_jensen_99"
path = "benches/distances/bang_jensen_99.rs"
harness = false

[[bench]]
name = "distances_kattis_bryr_1"
path = "benches/distances/kattis_bryr_1.rs"
harness = false

[[bench]]
name = "distances_kattis_bryr_2"
path = "benches/distances/kattis_bryr_2.rs"
harness = false

[[bench]]
name = "distances_kattis_bryr_3"
path = "benches/distances/kattis_bryr_3.rs"
harness = false

[[bench]]
name = "distances_kattis_crosscountry"
path = "benches/distances/kattis_crosscountry.rs"
harness = false

[[bench]]
name = "distances_kattis_shortestpath1"
path = "benches/distances/kattis_shortestpath1.rs"
harness = false

[[bench]]
name = "distances_erdos_renyi"
path = "benches/distances/erdos_renyi.rs"
harness = false

[[bench]]
name = "gen_biclique"
path = "benches/gen/biclique.rs"
harness = false

[[bench]]
name = "gen_circuit"
path = "benches/gen/circuit.rs"
harness = false

[[bench]]
name = "gen_complete"
path = "benches/gen/complete.rs"
harness = false

[[bench]]
name = "gen_cycle"
path = "benches/gen/cycle.rs"
harness = false

[[bench]]
name = "gen_empty"
path = "benches/gen/empty.rs"
harness = false

[[bench]]
name = "gen_erdos_renyi"
path = "benches/gen/erdos_renyi.rs"
harness = false

[[bench]]
name = "gen_random_recursive_tree"
path = "benches/gen/random_recursive_tree.rs"
harness = false

[[bench]]
name = "gen_path"
path = "benches/gen/path.rs"
harness = false

[[bench]]
name = "gen_random_tournament"
path = "benches/gen/random_tournament.rs"
harness = false

[[bench]]
name = "gen_star"
path = "benches/gen/star.rs"
harness = false

[[bench]]
name = "gen_wheel"
path = "benches/gen/wheel.rs"
harness = false

[[bench]]
name = "op_arcs"
path = "benches/op/arcs.rs"
harness = false

[[bench]]
name = "op_complement"
path = "benches/op/complement.rs"
harness = false

[[bench]]
name = "op_converse"
path = "benches/op/converse.rs"
harness = false

[[bench]]
name = "op_degree_sequence"
path = "benches/op/degree_sequence.rs"
harness = false

[[bench]]
name = "op_in_neighbors"
path = "benches/op/in_neighbors.rs"
harness = false

[[bench]]
name = "op_indegree_is_source"
path = "benches/op/indegree_is_source.rs"
harness = false

[[bench]]
name = "op_is_complete"
path = "benches/op/is_complete.rs"
harness = false

[[bench]]
name = "op_is_regular"
path = "benches/op/is_regular.rs"
harness = false

[[bench]]
name = "op_is_semicomplete"
path = "benches/op/is_semicomplete.rs"
harness = false

[[bench]]
name = "op_is_tournament"
path = "benches/op/is_tournament.rs"
harness = false

[[bench]]
name = "op_outdegree_is_sink"
path = "benches/op/outdegree_is_sink.rs"
harness = false

[[bench]]
name = "op_union"
path = "benches/op/union.rs"
harness = false

[[bench]]
name = "algo_bellman_ford_moore_distances"
path = "benches/algo/bellman_ford_moore_distances.rs"
harness = false

[[bench]]
name = "algo_bellman_ford_moore_new"
path = "benches/algo/bellman_ford_moore_new.rs"
harness = false

[[bench]]
name = "algo_bfs_iter"
path = "benches/algo/bfs_iter.rs"
harness = false

[[bench]]
name = "algo_bfs_new"
path = "benches/algo/bfs_new.rs"
harness = false
